Transform listener classes to obtain privileged Lookups